--- a/Index.html
+++ b/Index.html
@@ -1,84 +1,16 @@
 <!DOCTYPE html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        h1 {
-            color: #0a0a23;
-        }
-
-        input[type="text"] {
-            width: calc(100% - 22px);
-            padding: 10px;
-            margin-top: 5px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            box-shadow: inset 0 1px 3px #ddd;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #0056b3;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #003580;
-        }
-
-        #quiz,
-        #result {
-            display: none;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            background-color: white;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .question {
-            margin-bottom: 20px;
-        }
-
-        #timer {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        .navigation {
-            margin-top: 20px;
-        }
-
-        .navigation button {
-            margin-right: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <h1>Quiz App</h1>
     <div id="start">
         <input type="text" id="maDe" placeholder="Nhập mã đề thi">
+        <input type="text" id="maHocVien" placeholder="Nhập mã học viên">
         <button onclick="loadQuizData()">Bắt đầu Quiz</button>
     </div>
     <div id="quiz" style="display: none;">
@@ -91,207 +23,6 @@
         </div>
     </div>
     <div id="result" style="display: none;"></div>
-    <script>
-        let quizData;
-        let userAnswers = [];
-        let currentQuestionIndex = 0;
-        let timerInterval;
-        let timeLeft;
-
-        function loadQuizData() {
-            const maDe = document.getElementById('maDe').value;
-            if (!maDe) {
-                alert('Vui lòng nhập mã đề thi');
-                return;
-            }
-
-            fetch(`https://script.google.com/macros/s/AKfycbzAZTZRHpFNoE_iSx5EuwnaaBq9QxU_zenb0mZqmMjN02DNwwCzsxE0DMRgS1f_ZUwr/exec?maDe=${maDe}`)
-                .then(response => response.json())
-                .then(data => {
-                    if (data.error) {
-                        alert(data.error);
-                        return;
-                    }
-                    quizData = {
-                        maDe: maDe,
-                        timeLimit: 300, // 5 phút, có thể điều chỉnh
-                        questions: data
-                    };
-                    startQuiz();
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('Có lỗi xảy ra khi tải đề thi');
-                });
-        }
-
-        function startQuiz() {
-            userAnswers = new Array(quizData.questions.length).fill(null);
-            document.getElementById('start').style.display = 'none';
-            document.getElementById('quiz').style.display = 'block';
-            currentQuestionIndex = 0;
-            renderQuestion();
-            startTimer();
-        }
-
-        function renderQuestion() {
-            const questionContainer = document.getElementById('question');
-            const q = quizData.questions[currentQuestionIndex];
-            questionContainer.innerHTML = `<h2>Câu hỏi ${currentQuestionIndex + 1}</h2><p>${q.cauHoi}</p>`;
-
-            switch (q.loaiCauHoi) {
-                case 'multiple_choice':
-                    q.cacLuaChon.forEach((option, index) => {
-                        const checked = userAnswers[currentQuestionIndex] === option ? 'checked' : '';
-                        questionContainer.innerHTML += `
-                <label>
-                    <input type="radio" name="q${currentQuestionIndex}" value="${option}" ${checked}>
-                    ${option}
-                </label><br>
-            `;
-                    });
-                    break;
-                case 'multiple_select':
-                    q.cacLuaChon.forEach((option, index) => {
-                        const checked = userAnswers[currentQuestionIndex] && userAnswers[currentQuestionIndex].includes(option) ? 'checked' : '';
-                        questionContainer.innerHTML += `
-                <label>
-                    <input type="checkbox" name="q${currentQuestionIndex}" value="${option}" ${checked}>
-                    ${option}
-                </label><br>
-            `;
-                    });
-                    break;
-                case 'free_response':
-                case 'fill_in_blank':
-                    const value = userAnswers[currentQuestionIndex] || '';
-                    questionContainer.innerHTML += `<input type="text" name="q${currentQuestionIndex}" value="${value}">`;
-                    break;
-                case 'matching':
-                    // Giả sử 'matching' không được sử dụng trong ví dụ này
-                    break;
-            }
-
-            updateNavigationButtons();
-        }
-
-
-        function updateNavigationButtons() {
-            document.getElementById('prevBtn').style.display = currentQuestionIndex > 0 ? 'inline' : 'none';
-            document.getElementById('nextBtn').style.display = currentQuestionIndex < quizData.questions.length - 1 ? 'inline' : 'none';
-            document.getElementById('submitBtn').style.display = currentQuestionIndex === quizData.questions.length - 1 ? 'inline' : 'none';
-        }
-
-        function navigate(direction) {
-            saveCurrentAnswer();
-            currentQuestionIndex += direction;
-            renderQuestion();
-        }
-
-        function saveCurrentAnswer() {
-            const q = quizData.questions[currentQuestionIndex];
-            switch (q.loaiCauHoi) {
-                case 'multiple_choice':
-                    const selectedOption = document.querySelector(`input[name="q${currentQuestionIndex}"]:checked`);
-                    userAnswers[currentQuestionIndex] = selectedOption ? selectedOption.value : null;
-                    break;
-                case 'multiple_select':
-                    let selectedOptions = Array.from(document.querySelectorAll(`input[name="q${currentQuestionIndex}"]:checked`)).map(input => input.value);
-                    userAnswers[currentQuestionIndex] = selectedOptions;
-                    break;
-                case 'free_response':
-                case 'fill_in_blank':
-                    userAnswers[currentQuestionIndex] = document.querySelector(`input[name="q${currentQuestionIndex}"]`).value;
-                    break;
-            }
-        }
-
-
-        function startTimer() {
-            timeLeft = quizData.timeLimit;
-            updateTimerDisplay();
-            timerInterval = setInterval(() => {
-                timeLeft--;
-                updateTimerDisplay();
-                if (timeLeft <= 0) {
-                    clearInterval(timerInterval);
-                    submitQuiz();
-                }
-            }, 1000);
-        }
-
-        function updateTimerDisplay() {
-            const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-            document.getElementById('timer').textContent = `Thời gian còn lại: ${minutes}:${seconds.toString().padStart(2, '0')}`;
-        }
-
-        function submitQuiz() {
-            saveCurrentAnswer();
-            clearInterval(timerInterval);
-            const score = calculateScore();
-
-            // Tạo một danh sách các câu hỏi và câu trả lời
-            let resultsDetails = quizData.questions.map((question, index) => {
-                const userAnswer = userAnswers[index];
-                const correctAnswer = question.dapAnDung;
-                const isCorrect = Array.isArray(correctAnswer) ?
-                    correctAnswer.sort().toString() === userAnswer.sort().toString() :
-                    correctAnswer.toLowerCase() === (userAnswer && userAnswer.toLowerCase());
-                return `<li>Câu ${index + 1}: ${isCorrect ? 'Đúng' : 'Sai'}<br>
-            Câu hỏi: ${question.cauHoi}<br>
-            Câu trả lời của bạn: ${userAnswer || 'Không có'}<br>
-            Đáp án đúng: ${Array.isArray(correctAnswer) ? correctAnswer.join(', ') : correctAnswer}</li>`;
-            }).join('');
-
-            // Gửi kết quả lên Google Sheets
-            fetch('https://script.google.com/macros/s/AKfycbzAZTZRHpFNoE_iSx5EuwnaaBq9QxU_zenb0mZqmMjN02DNwwCzsxE0DMRgS1f_ZUwr/exec', {
-                method: 'POST',
-                body: JSON.stringify({
-                    maDe: quizData.maDe,
-                    userID: 'user123',  // Thay bằng ID thực tế của người dùng
-                    score: score,
-                    answers: userAnswers
-                })
-            });
-
-            // Hiển thị kết quả chi tiết
-            document.getElementById('quiz').style.display = 'none';
-            document.getElementById('result').style.display = 'block';
-            document.getElementById('result').innerHTML = `
-    <h2>Kết quả</h2>
-    <p>Điểm của bạn: ${score}/${quizData.questions.length}</p>
-    <ul>${resultsDetails}</ul>
-    `;
-        }
-
-        function calculateScore() {
-            let score = 0;
-            quizData.questions.forEach((q, index) => {
-                const userAnswer = userAnswers[index];
-                const correctAnswer = q.dapAnDung;
-                let isCorrect = false;
-
-                if (Array.isArray(correctAnswer)) {
-                    // Đảm bảo rằng cả hai mảng được chuẩn hóa và so sánh như nhau
-                    const normalizedUserAnswer = userAnswer.map(a => a.trim().toLowerCase()).sort();
-                    const normalizedCorrectAnswer = correctAnswer.map(a => a.trim().toLowerCase()).sort();
-                    isCorrect = JSON.stringify(normalizedUserAnswer) === JSON.stringify(normalizedCorrectAnswer);
-                } else {
-                    // Chuẩn hóa và so sánh câu trả lời đơn
-                    isCorrect = userAnswer.trim().toLowerCase() === correctAnswer.trim().toLowerCase();
-                }
-
-                if (isCorrect) {
-                    score++;
-                }
-            });
-            return score;
-        }
-
-
-
-    </script>
+    <script src="quiz.js"></script>
 </body>
-
 </html>
